fixed some sonarqube issues